Add basic solr proxy layer for query
